Fix footer formatting on mobile

--- a/static/assets/base.css
+++ b/static/assets/base.css
@@ -25,22 +25,6 @@ main {
   flex-grow: 1;
 }
 
-footer.page-footer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  row-gap: 0.5rem;
-  margin-top: 2rem;
-  padding-bottom: 1.5rem;
-}
-
-@media (min-width: 640px) {
-  footer.page-footer {
-    justify-content: space-between;
-    flex-direction: row;
-  }
-}
-
 h1 {
   font-size: var(--font-size-h1);
 }
